Remove '>' from file info display text

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -131,7 +131,7 @@
                                 <span>Created At: </span>{{node.created_at}}<br>
                                 <span>Uploader: </span>{{node.created_by|get_username}}<br>
                                 <span>Format: </span>{{node.mime_type}}<br>
-                                <span>Size: </span>{{node.file_size.size}}{{node.file_size.unit}}>
+                                <span>Size: </span>{{node.file_size.size}}{{node.file_size.unit}}
                             </div>
                             <div class="content active" id="image-comments">
                                 <div class="row comments-area">
