--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/unit_player.html
@@ -94,17 +94,17 @@
           </div>
       </div>
       <div class="activity-slides-container row" >
-          {% get_relation_value node.pk 'has_help' as grel_dict %}
+          {% get_help_pages_of_node node as help_page_list %}
           <div class="columns small-12 activity-slides">
               <div class="row activity-slide node_details" >
-                  {% if grel_dict.cursor and grel_dict.grel_node.count %}
+                  {% if help_page_list %}
                     <a id="related-content-button" href="#related-content" class="view-related-content"><i class="fa fa-arrow-circle-down"></i>&nbsp;View related contents</a>
                   {% endif %}
                   {# {{node.content|safe}} #}
                   {% include 'ndf/node_ajax_content.html' with no_discussion=True %}
               </div>
-              {% if grel_dict.cursor and grel_dict.grel_node.count %}
-              {% for each_help_page in grel_dict.grel_node %}
+              {% if help_page_list %}
+              {% for each_help_page in help_page_list %}
               <div id="related-content">
                 <i class="fa fa-info-circle"></i>
                 <div class="related-content-header">
