Announce option in course-player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -118,6 +118,9 @@ color: black !important;
               <li>
                 <a data-reveal-id="group_banner_prof_pic_prop" id="group_banner_btnUploadProfilePic" class="fi-pencil">Edit Photo</a>
               </li>
+              <li>
+                <a href="{% url 'create_event_group' group_id 'CourseEventGroup' %}?cnode_id={{group_id}}" class="fi-pencil">Announce</a>
+              </li>
             </ul>
           </div>
       </div>
