In note-making, show msg 'Create new Note' instead of 'Create new Blog'

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -89,7 +89,7 @@
 						{% trans "Editing " %} {{title}} : {{node.name}}
 					{% else %}
 						{% if blog_type %}
-							{% trans "Create New Blog" %} :
+							{% trans "Create New Note" %} :
 						{% else %}
 							{% trans "Create New " %} {{title}} :
 						{% endif  %}
