--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -486,7 +486,7 @@
               {% endif %}
                   Download
                 </a>
-
+                {% comment %}
                {% get_gstudio_social_share_resource as social_share %}
                   {% if social_share %}
                     <span>
@@ -495,7 +495,8 @@
                         </a>
                       </span>
                   {% endif %}
-              {% endif %}
+              {% endcomment %}
+                {% endif %}
 
           {%  else %}
             {% if node.if_file.mime_type %}
@@ -525,7 +526,7 @@
           {% if "Info page" not in type_of_list %}
               {% if not no_discussion %}
                 <!-- Discussion -->
-                <div class="content large-6 columns" id="view-discussion" >
+                <div class="content large-10 columns" id="view-discussion" >
                   <!-- discussion content area -->
                   {% if node.discussion_enable %}
                     {% get_thread_node node.pk as thread_node %}
