--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -86,7 +86,7 @@
 		 	<div class="large-8 columns">    
 		 		<h3><span class="subheader">		
 					{% if node %}
-						{% trans "Editing " %} {{title}} : {{node.name}}
+						{% trans "Editing " %}{% if blog_type %} {% trans 'Note' %}{% else %} {{title}} {% endif %}: {{node.name}}
 					{% else %}
 						{% if blog_type %}
 							{% trans "Create New Note" %} :
