close button on reveal model css changed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -158,7 +158,7 @@
         </div>
     </div>
     <a href="{% url redirect_tab_url group_id %}" class="file-detail-modal-close"></a>
-    <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+    <a class="close-reveal-modal" aria-label="Close" style="top:0rem!important;margin-right:10px!important;">&#215;</a>
 
 </div>
 <script type="text/javascript">
