--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
@@ -93,6 +93,9 @@
                                 <input type="file" name="doc" id="docFile" style="display: none;"/>
                             </label>
                             <div class="save_cancel hide">
+                                <img id="img_preview" alt="New file" class="hide" />
+                                <label id="file_preview" class="hide"></label>
+
                               <input type="submit" id="submitpostid" class="tiny button radius" value="Save"/>
                               <input type="button" id="btnUploadCancel" class="tiny button radius" value="Cancel"/>
                             </div>
