Set font-size in tabs in file detail view of course player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -6,6 +6,9 @@
     .image-details .tabs .tab-title{
         width: 25% !important;
     }
+    .tab-title > a{
+        font-size: 0.80rem !important;
+    }
 </style>
 <!--<style type="text/css">
     .gmodal-item-panel .text-gray{
