Pass course_tab_title with edit url in file detail view of coure-player

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -113,7 +113,7 @@
                         {% get_edit_url node.pk as edit_url %}
                         {% check_is_gstaff group_id request.user as is_gstaff %}
                         {% if is_gstaff or node.created_by == request.user.id %}
-                            <a href="{% url edit_url group_id node.pk %}">
+                            <a href="{% url edit_url group_id node.pk %}?course_tab_title={{title}}">
                                 <i class="fi-page-edit" ></i>Edit
                             </a>
                         {% endif %}
