--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerymodal.html
@@ -9,6 +9,9 @@
     .tab-title > a{
         font-size: 0.80rem !important;
     }
+    .lbl_of_tag{
+        background-color: gold !important;
+    }
 </style>
 <!--<style type="text/css">
     .gmodal-item-panel .text-gray{
@@ -90,6 +93,24 @@
                         <h5>{% firstof node.altnames node.name %}</h5>
                     </div>
                 </div>
+                {% if node.tags %}
+                <div class="row tag-rating-div">
+                        {% for tag in node.tags %}
+                            {% if forloop.counter < 3 %}
+                                <small><label class="lbl_of_tag label">
+                            {% else %}
+                                <small><label class="lbl_of_tag label tag_ele hide">
+                            {% endif %}
+                            <a href="{% url 'tag_info' groupid tag %}">{{tag}} </a></label></small>
+                        {% endfor %}
+                        {% if node.tags|length > 2 %}
+                            <small><label class="view-more-tags" style="display:inline-block;">More</label></small>
+                        {% endif %} 
+                    {% else %}
+                    <i><small><label class="lbl_of_tag">{% trans "No tags defined yet!" %}</label></small></i>
+                </div>
+                {% endif %}
+
                 <div class="row image-brief">
                     <div class="small-12 columns">
                         {% include "ndf/analytics_views.html" %}
@@ -183,6 +204,17 @@ $(".view-info-close").click(function(){
     $(".rating-area").show();
     $(".comments-area").show();
 });
+
+$(document).on('click','.view-more-tags',function(){
+    if($(this).text()=="Less"){
+        $(".tag_ele").addClass("hide")
+        $(this).text("More")
+    }
+    else{
+        $(".tag_ele").removeClass("hide")
+        $(this).text("Less")
+    }
+})
 
 
 </script>
