--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/ggallerypage.html
@@ -1,4 +1,5 @@
 {% load get_course_filters get_group_name from ndf_tags %}
+{% load i18n %}
 {% get_group_name groupid as group_name_tag %}
 
 {% load simple_filters %}
