--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/note_page.html
@@ -1,6 +1,13 @@
 {% load get_username get_thread_node get_disc_replies get_node check_is_gstaff from ndf_tags %}
-{% check_is_gstaff group_id request.user as is_gstaff %}
+{% load i18n %}
 
+{% check_is_gstaff group_id request.user as is_gstaff %}
+<style type="text/css">
+    .lbl_of_tag{
+        background-color: gold !important;
+    }
+    
+</style>
     <div class="row note-toolbar">
         <div class="small-12 medium-9 columns creator-title">
             <i class="fi-torso"></i>
@@ -27,14 +34,25 @@
     <div class="row note-content">
         <div class="small-12 columns">
             <div class="note-header row">
-                <span class="note-title">{{node.name}}</span>{% include "ndf/analytics_views.html" %}
+                <span class="note-title">{{node.name}}</span>
                 {% if node.tags %}
-                <div class="note-tags">
-                {% for each_tag in node.tags %}
-                    <a>{{each_tag}}</a>
-                {% endfor %}
-                </div>
+                    <div class="row tag-rating-div">
+                            {% for tag in node.tags %}
+                                {% if forloop.counter < 3 %}
+                                    <small><label class="lbl_of_tag label">
+                                {% else %}
+                                    <small><label class="lbl_of_tag label tag_ele hide">
+                                {% endif %}
+                                <a href="{% url 'tag_info' groupid tag %}">{{tag}} </a></label></small>
+                            {% endfor %}
+                            {% if node.tags|length > 2 %}
+                                <small><label class="view-more-tags" style="display:inline-block;">More</label></small>
+                            {% endif %} 
+                    </div>
+                {% else %}
+                    <i><small><label>{% trans "No tags defined yet!" %}</label></small></i>
                 {% endif %}
+                    {% include "ndf/analytics_views.html" %}
                 {% if is_gstaff or node.created_by == request.user.id %}
                     <a href="{% url 'page_create_edit' group_id node.pk %}?course_event_id={{group_id}}&blog_type=True" class="fi-pencil" style="float:right;">Edit</a>
                 {% endif %}
@@ -82,3 +100,17 @@
         </div>
     </div>
     {% endcomment %}
+
+<script type="text/javascript">
+$(document).on('click','.view-more-tags',function(){
+    if($(this).text()=="Less"){
+        $(".tag_ele").addClass("hide")
+        $(this).text("More")
+    }
+    else{
+        $(".tag_ele").removeClass("hide")
+        $(this).text("Less")
+    }
+})
+    
+</script>
