langauge menu removed if clix

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
@@ -320,7 +320,7 @@
          -->
         <!-- Closes Right Nav section -->
 
-
+{% if "CourseEventGroup" not in group_object.member_of_names_list and site.SITE_NAME != "clix" %}
         <ul class="right">
           <li class="has-dropdown">
             <a>{% trans "Language" %} &nbsp; | &nbsp; {{request.LANGUAGE_CODE}}</a>
@@ -340,7 +340,7 @@
             </ul>
           </li>
         </ul>
-
+{% endif %}
         
         <!-- Right Nav Section -->
         <ul class="right">
