--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/simple_card.html
@@ -119,15 +119,15 @@
 </a>
 
 <!-- suppy no_footer=True for not having footer-->
-    {% if not no_footer %}
+    {% if not no_footer   %}
   <div class="scard-action">
     {% if has_contributor == True %}
      <a style="margin-left:2px" href="{% url 'dashboard' resource.created_by %}" title="{{resource.created_by|get_username}}" target="_blank">
       {{resource.created_by|get_username|truncatechars:"10"}}</a>
      {% endif %}
          <i style="float:right">{{resource.created_at|date:"d-m-Y"}}</i>
-     {% if gstaff_access  %}
-      {% if not no_checkbox %}
+     {% if gstaff_access or user.is_authenticated and is_course_card == "True" %}
+      {% if not no_checkbox  %}
         </a> <input type="checkbox" style="margin:0; float:left;" class="filenode" name="filenode" value="{{resource.pk}}">
       {% endif %}
     {% endif %}
