--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_ajax_content.html
@@ -299,7 +299,7 @@
                   <p>{% trans 'Your browser does not support the audio element' %} </p>
                 </iframe>
               {% elif 'pdf' in node.if_file.mime_type %}
-                <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={% url 'read_file' group_name_tag node grid_fs_obj.filename %}"></iframe>
+                <iframe width="100%" style="height:90vh;" src="/static/ndf/bower_components/pdfjs-build/generic/web/viewer.html?file={{MEDIA_URL}}{{node.if_file.original.relurl}}"></iframe>
                 <br/>
                 <center>
                    <figcaption style="position:relative;top:0;left:0" title="Click Here to View Image in Full Screen">
