--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/node_edit_base.html
@@ -555,8 +555,8 @@
 		      </div>
 		      <div class="large-pull-4 large-6 medium-8 columns">
 		        <select id="release_resp_sel" name="release_resp_sel">
-		          <option value="True" {% if resp_val %} selected{% endif %}>Show Replies to All</option>
-		          <option value="False" {% if not resp_val %} selected{% endif %}>Hide Replies from All</option>
+		          <option value="True" {% if resp_val or not grel_dict %} selected{% endif %}>Show Replies to All</option>
+		          <option value="False" {% if grel_dict and not resp_val %} selected{% endif %}>Hide Replies from All</option>
 		        </select>
 		      </div>
 		    </div>
