Alert msg color changed

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gin-line-texteditor.html
@@ -30,6 +30,11 @@
     <script type="text/javascript" src="/static/ndf/bower_components/ckeditor/config.js"></script>
 
   {% endif %}
+<style type="text/css">
+  div.reveal-modal > label{
+    color: black !important;
+  }
+</style>
 
 {% endblock %}
 
